include/lntd/gpu.h

/*
 * Copyright 2014, 2015 Steven Stewart-Gallus
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
 * implied.  See the License for the specific language governing
 * permissions and limitations under the License.
 */
#ifndef LNTD_GPU_H
#define LNTD_GPU_H

#include "lntd/error.h"

#include <stdint.h>

/**
 * @file
 *
 * Draws graphics using the GPU.
 */

typedef uint_fast32_t lntd_gpu_x11_window;

struct lntd_gpu_context;

struct lntd_gpu_update {
	float z_rotation;
	float x_rotation;

	float x_position;
	float y_position;
	float z_position;

	float mx_position;
	float my_position;
	float mz_position;
};

lntd_error
lntd_gpu_context_create(struct lntd_gpu_context **gpu_contextp);
lntd_error
lntd_gpu_context_destroy(struct lntd_gpu_context *gpu_context);

lntd_error lntd_gpu_set_x11_window(struct lntd_gpu_context *gpu_context,
                                   lntd_gpu_x11_window x11_window);
lntd_error lntd_gpu_remove_window(struct lntd_gpu_context *gpu_context);

void lntd_gpu_update_state(struct lntd_gpu_context *gpu_context,
                           struct lntd_gpu_update const *gpu_update);

void lntd_gpu_resize(struct lntd_gpu_context *gpu_context,
                     unsigned width, unsigned height);

void lntd_gpu_hide(struct lntd_gpu_context *gpu_context);
void lntd_gpu_show(struct lntd_gpu_context *gpu_context);

#endif /* LNTD_GPU_H */